--- a/package.json
+++ b/package.json
@@ -29,16 +29,20 @@
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
     "@ionic-native/core": "^5.34.0",
+    "@ionic-native/http": "^5.35.0",
     "@ionic-native/social-sharing": "^5.34.0",
     "@ionic-native/splash-screen": "^5.35.0",
     "@ionic-native/status-bar": "^5.35.0",
     "@ionic/angular": "^5.6.12",
     "@ionic/cli": "^6.16.3",
+    "body-parser": "^1.19.0",
+    "cordova-plugin-advanced-http": "^3.2.0",
     "cordova-plugin-splashscreen": "^6.0.0",
     "cordova-plugin-statusbar": "^2.4.3",
+    "glob-parent": "^6.0.1",
     "http": "^0.0.1-security",
     "latest-version": "^6.0.0",
-    "mongoose": "^5.13.6",
+    "mongoose": "^5.13.7",
     "node-sass": "^6.0.1",
     "normalize-url": "^6.0.1",
     "require": "^2.4.20",
@@ -70,16 +74,16 @@
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jsdoc": "36.0.6",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "~3.8.0",
+    "jasmine-core": "^3.8.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine-html-reporter": "^1.6.0",
     "protractor": "~7.0.0",
-    "rxjs": "^6.5.3",
+    "rxjs": "^6.6.7",
     "ts-node": "~10.1.0",
     "typescript": "~4.3.5"
   },
